<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_movie"
        android:title="@string/movies"
        android:icon="@drawable/baseline_movie_black_18dp" />
    <item android:id="@+id/action_tvshow"
        android:title="@string/tvshow"
        android:icon="@drawable/baseline_live_tv_black_18dp" />
    <item android:id="@+id/action_people"
        android:title="@string/people"
        android:icon="@drawable/baseline_people_black_18dp" />
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_black_18dp" />
    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_black_18dp" />
</menu>